k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: organica
spec:
  type: ClusterIP
  selector:
    app: organica
  ports:
    - port: 80
      targetPort: 3000
